@@ -1,6 +1,7 @@
 ==== 2.4.1.dev0 ====
     * fix file callback on files smaller than 1000B
-    * add FileObjResponse
+    * add FileObjResponse class
+    * add BaseResponse class
 
 ==== 2.4.0 ====
     * new render_negotiation function
